# enid_bot

./: docker-compose.yml  dockerfile  makefile  pyproject.toml  setup.cfg
src/: autoreload.py  dispatcher.py  handlers.py  main.py
src/handlers/hero/: constants.py  handler.py  parser.py  router.py
src/handlers/katz/: handler.py  parser.py  router.py
src/handlers/person/: handler.py  parser.py  router.py
src/handlers/proponent/: constants.py  handler.py  router.py  scraper.py
src/handlers/start/: handler.py  router.py
src/helpers/: colors.py  driver.py  tasks.py  web.py
tests/handlers/person/: conftest.py  test_parser.py
tests/handlers/proponent/: conftest.py  test_scraper.py
tests/hero/: conftest.py  test_helpers.py  test_parser.py
