[tool.poetry]
name = "enid-helper-bot"
version = "0.1.0"
description = ""
authors = ["emurze <grayemurze@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.3.0"
pydantic = "^2.5.3"
uvicorn = "^0.26.0"
hachiko = "^0.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
