[tool.poetry]
name = "enid-helper-bot"
version = "0.1.0"
description = ""
authors = ["emurze <grayemurze@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.3.0"
pydantic = "^2.5.3"
aiohttp = "^3.9.1"
bs4 = "^0.0.2"
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
lxml = "^5.1.0"
selenium = "^4.16.0"
watchdog = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
